fixing z-index on iframe

--- a/greasemonkey/make-note/make-note.less
+++ b/greasemonkey/make-note/make-note.less
@@ -23,6 +23,7 @@
 		height: 18px;
 		display: block;
 		max-width: 100%;
+		z-index: 100000;
 
 		&.__make-note_loaded {
 			opacity: 1;
